// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Title component applies extra classes passed via className 1`] = `
<DocumentFragment>
  <h1
    class="font-bold text-5xl my-8 extra-class"
  >
    Main Title
  </h1>
</DocumentFragment>
`;

exports[`Title component renders the children text correctly 1`] = `
<DocumentFragment>
  <h1
    class="font-bold text-5xl my-8"
  >
    Main Title
  </h1>
</DocumentFragment>
`;
